--- a/hsync-server/hsync-server.cabal
+++ b/hsync-server/hsync-server.cabal
@@ -12,6 +12,9 @@ Flag library-only
     Default:       False
 
 library
+
+    hs-source-dirs: . ../common
+
     exposed-modules: Application
                      Foundation
                      Import
@@ -22,6 +25,7 @@ library
                      Handler.Home
                      Handler.Auth
                      Handler.FileActions
+                     HSync.Types
 
     if flag(dev) || flag(library-only)
         cpp-options:   -DDEVELOPMENT
@@ -74,6 +78,8 @@ library
                  , fast-logger                   >= 0.3
                  , SHA                           >= 1.6.1      && < 1.7
                  , yesod-persistent              >= 1.2.1      && < 1.3
+                 , stm                           >= 2.4.2      && < 2.5
+                 , flock                         >= 0.3.1      && < 0.4
                  -- , time                          >= 1.4.1      && < 1.5
                  -- , old-locale                    >= 1.0.0.5    && < 1.1
 
