--- a/hsync-server/hsync-server.cabal
+++ b/hsync-server/hsync-server.cabal
@@ -13,19 +13,18 @@ Flag library-only
 
 library
 
-    hs-source-dirs: . ../common
+    hs-source-dirs: src
 
-    exposed-modules: Application
-                     Foundation
-                     Import
-                     Model
-                     Settings
-                     Settings.StaticFiles
-                     Settings.Development
-                     Handler.Home
-                     Handler.Auth
-                     Handler.FileActions
-                     HSync.Common.Types
+    exposed-modules: HSync.Server.Application
+                     HSync.Server.Foundation
+                     HSync.Server.Import
+                     HSync.Server.Model
+                     HSync.Server.Settings
+                     HSync.Server.Settings.StaticFiles
+                     HSync.Server.Settings.Development
+                     HSync.Server.Handler.Home
+                     HSync.Server.Handler.Auth
+                     HSync.Server.Handler.FileActions
 
     if flag(dev) || flag(library-only)
         cpp-options:   -DDEVELOPMENT
@@ -80,6 +79,7 @@ library
                  , yesod-persistent              >= 1.2.1      && < 1.3
                  , stm                           >= 2.4.2      && < 2.5
                  , flock                         >= 0.3.1      && < 0.4
+                 , hsync-common                  >= 0.0.0.0    && < 0.2
                  -- , time                          >= 1.4.1      && < 1.5
                  -- , old-locale                    >= 1.0.0.5    && < 1.1
 
