--- a/hsync-server/hsync-server.cabal
+++ b/hsync-server/hsync-server.cabal
@@ -79,7 +79,9 @@ library
                  , yesod-persistent              >= 1.2.1      && < 1.3
                  , stm                           >= 2.4.2      && < 2.5
                  , flock                         >= 0.3.1      && < 0.4
+                 , wai                           >= 1.4.0.1    && < 1.5
                  , hsync-common                  >= 0.0.0.0    && < 0.2
+
                  -- , old-locale                    >= 1.0.0.5    && < 1.1
 
 executable         hsync-server
