--- a/hsync-server/hsync-server.cabal
+++ b/hsync-server/hsync-server.cabal
@@ -1,5 +1,5 @@
 name:              hsync-server
-version:           0.0.0
+version:           0.0.0.0
 cabal-version:     >= 1.8
 build-type:        Simple
 
@@ -25,6 +25,13 @@ library
                      HSync.Server.Handler.Home
                      HSync.Server.Handler.Auth
                      HSync.Server.Handler.FileActions
+
+
+    Extra-Source-Files: config/models
+                        config/routes
+                        config/settings.yml
+                        config/sqlite.yml
+
 
     if flag(dev) || flag(library-only)
         cpp-options:   -DDEVELOPMENT
@@ -75,10 +82,9 @@ library
                  , conduit                       >= 1.0
                  , monad-logger                  >= 0.3
                  , fast-logger                   >= 0.3
-                 , SHA                           >= 1.6.1      && < 1.7
+                 , SHA                           >= 1.6        && < 1.7
                  , yesod-persistent              >= 1.2.1      && < 1.3
                  , stm                           >= 2.4.2      && < 2.5
-                 , flock                         >= 0.3.1      && < 0.4
                  , wai                           >= 1.4.0.1    && < 1.5
                  , hsync-common                  >= 0.0.0.0    && < 0.2
 
