--- a/hsync-server/hsync-server.cabal
+++ b/hsync-server/hsync-server.cabal
@@ -55,7 +55,7 @@ library
 
     build-depends: base                          >= 4          && < 5
                  -- , yesod-platform                >= 1.1        && < 1.2
-                 , yesod                         >= 1.2.3      && < 1.3
+                 , yesod                         >= 1.2.4      && < 1.3
                  , yesod-core                    >= 1.2        && < 1.3
                  , yesod-auth                    >= 1.2        && < 1.3
                  , yesod-static                  >= 1.2        && < 1.3
@@ -68,24 +68,24 @@ library
                  , template-haskell
                  , hamlet                        >= 1.1        && < 1.2
                  , shakespeare-css               >= 1.0        && < 1.1
-                 , shakespeare-js                >= 1.0.2      && < 1.2
+                 , shakespeare-js                >= 1.0.2      && < 1.3
                  , shakespeare-text              >= 1.0        && < 1.1
                  , hjsmin                        >= 0.1        && < 0.2
                  , monad-control                 >= 0.3        && < 0.4
-                 , wai-extra                     >= 1.3        && < 1.4
+                 , wai-extra                     >= 2.0        && < 3.1
                  , yaml                          >= 0.8        && < 0.9
                  , http-conduit                  >= 1.9        && < 1.10
                  , directory                     >= 1.1        && < 1.3
-                 , warp                          >= 1.3        && < 1.4
+                 , warp                          >= 2.0        && < 3.0
                  , data-default
-                 , aeson                         >= 0.6.1.0    && < 0.7
+                 , aeson                         >= 0.6.2.0    && < 0.7
                  , conduit                       >= 1.0
-                 , monad-logger                  >= 0.3
+                 , monad-logger                  >= 0.3        && < 0.4
                  , fast-logger                   >= 0.3
                  , SHA                           >= 1.6        && < 1.7
                  , yesod-persistent              >= 1.2.1      && < 1.3
                  , stm                           >= 2.4.2      && < 2.5
-                 , wai                           >= 1.4.0.1    && < 1.5
+                 , wai                           >= 2.0        && < 2.1
                  , hsync-common                  >= 0.0.0.0    && < 0.2
                  -- , time
 
