--- a/hsync-server/hsync-server.cabal
+++ b/hsync-server/hsync-server.cabal
@@ -74,7 +74,7 @@ library
                  , monad-control                 >= 0.3        && < 0.4
                  , wai-extra                     >= 2.0        && < 3.1
                  , yaml                          >= 0.8        && < 0.9
-                 , http-conduit                  >= 1.9        && < 1.10
+                 , http-conduit                  >= 2.0        && < 2.1
                  , directory                     >= 1.1        && < 1.3
                  , warp                          >= 2.0        && < 3.0
                  , data-default
@@ -86,6 +86,7 @@ library
                  , yesod-persistent              >= 1.2.1      && < 1.3
                  , stm                           >= 2.4.2      && < 2.5
                  , wai                           >= 2.0        && < 2.1
+                 , wai-logger                    >= 2.0.1      && < 2.1
                  , hsync-common                  >= 0.0.0.0    && < 0.2
                  -- , time
 
