--- a/hsync-server/config/settings.yml
+++ b/hsync-server/config/settings.yml
@@ -2,6 +2,7 @@ Default: &defaults
   host: "*4" # any IPv4 host
   port: 3000
   approot: "http://localhost:3000"
+  filesDir: "files/"
   notificationLogDir: "notificationlog.log"
   copyright: Insert copyright statement here
   #analytics: UA-YOURCODE
