--- a/hsync-server/hsync-server.cabal
+++ b/hsync-server/hsync-server.cabal
@@ -20,7 +20,8 @@ library
                      HSync.Server.AcidSync
                      HSync.Server.FileSystemState
                      HSync.Server.Import
-                     HSync.Server.Model
+                     HSync.Server.User
+                     -- HSync.Server.Model
                      HSync.Server.Notifications
                      HSync.Server.Settings
                      HSync.Server.Settings.StaticFiles
@@ -88,11 +89,11 @@ library
 
                  , template-haskell
 
-                 , yesod-persistent              >= 1.2.1      && < 1.3
-
-                 , persistent                    >= 1.2        && < 1.3
-                 , persistent-sqlite             >= 1.2        && < 1.3
-                 , persistent-template           >= 1.2        && < 1.3
+                 , ixset                         >= 1.0.5      && < 1.1
+                 -- , yesod-persistent              >= 1.2.1      && < 1.3
+                 -- , persistent                    >= 1.2        && < 1.3
+                 -- , persistent-sqlite             >= 1.2        && < 1.3
+                 -- , persistent-template           >= 1.2        && < 1.3
 
                  , hamlet                        >= 1.1        && < 1.2
                  , shakespeare-css               >= 1.0        && < 1.1
