All the required changes to switch from persistent to acid state. The new module contains the generalized query and update functions that work from within any monad, so in particular the handler

--- a/hsync-server/hsync-server.cabal
+++ b/hsync-server/hsync-server.cabal
@@ -18,6 +18,7 @@ library
     exposed-modules: HSync.Server.Application
                      HSync.Server.Foundation
                      HSync.Server.AcidSync
+                     HSync.Server.AcidState
                      HSync.Server.FileSystemState
                      HSync.Server.Import
                      HSync.Server.User
