--- a/hsync-server/hsync-server.cabal
+++ b/hsync-server/hsync-server.cabal
@@ -31,8 +31,7 @@ library
                      HSync.Server.Handler.FileActions
                      -- HSync.Server.Handler.Acid
 
-    Extra-Source-Files: config/models
-                        config/routes
+    Extra-Source-Files: config/routes
                         config/settings.yml
                         config/sqlite.yml
 
@@ -60,6 +59,12 @@ library
     build-depends: base                          >= 4          && < 5
                  -- , yesod-platform                >= 1.2        && < 1.3
 
+                 -- The version of the API that we implement:
+                 , hsync-server-api              == 0.1.0.0
+
+
+                 , hsync-common                  >= 0.0.0.0    && < 0.2
+
                  , yesod                         >= 1.2.5.2    && < 1.3
                  , yesod-core                    >= 1.2.11     && < 1.3
                  , yesod-auth                    >= 1.3.0.2    && < 1.4
@@ -86,29 +91,27 @@ library
 
                  , template-haskell
 
-                 , ixset                         >= 1.0.5      && < 1.1
-                 -- , yesod-persistent              >= 1.2.1      && < 1.3
-                 -- , persistent                    >= 1.2        && < 1.3
-                 -- , persistent-sqlite             >= 1.2        && < 1.3
-                 -- , persistent-template           >= 1.2        && < 1.3
 
-                 , hamlet                        >= 1.1        && < 1.2
-                 , shakespeare-css               >= 1.0        && < 1.1
-                 , shakespeare-js                >= 1.0.2      && < 1.3
-                 , shakespeare-text              >= 1.0        && < 1.1
+                 , hamlet                        >= 1.2        && < 1.3
+                 , shakespeare                   >= 2.0.0.1    && < 2.1
+                 , shakespeare-css               >= 1.1        && < 1.2
+                 , shakespeare-js                >= 1.3        && < 1.4
+                 , shakespeare-text              >= 1.1        && < 1.2
                  , hjsmin                        >= 0.1        && < 0.2
 
                  , monad-control                 >= 0.3        && < 0.4
                  , mtl                           >= 2.1.2      && < 2.2
                  , transformers                  >= 0.3        && < 0.4
 
-                 , http-conduit                  >= 2.0        && < 2.1
-                 , conduit                       >= 1.0
+                 , resourcet                     >= 1.1.1      && < 1.2
+                 , http-conduit                  >= 2.1        && < 2.2
+                 , conduit                       >= 1.1        && < 1.2
+                 , conduit-extra                 >= 1.1        && < 1.2
 
                  , acid-state                    >= 0.12.1     && < 0.12.2
                  , safecopy                      >= 0.8.2      && < 0.8.3
+                 , ixset                         >= 1.0.5      && < 1.1
 
-                 , hsync-common                  >= 0.0.0.0    && < 0.2
 
 
 executable         hsync-server
