--- a/hsync-server-api/hsync-server-api.cabal
+++ b/hsync-server-api/hsync-server-api.cabal
@@ -17,10 +17,13 @@ cabal-version:       >=1.10
 
 library
   exposed-modules: HSync.Server
+                   Yesod.JoinPath
 
   Extra-Source-Files: routes
 
-  -- other-modules:
+  -- other-modules: HSync.Server.Internal
+  --                HSync.Server.JoinPath
+
   -- other-extensions:
 
   hs-source-dirs: src
@@ -30,8 +33,13 @@ library
                , yesod-core                    >= 1.2.11     && < 1.3
                , yesod-auth                    >= 1.3.0.2    && < 1.4
                , yesod-static                  >= 1.2.2.4    && < 1.3
+               , http-types                    >= 0.8        && < 0.9
 
                , template-haskell
+
+               , text                          >= 0.11       && < 0.12
+               , blaze-builder                 >= 0.3.1.1    && < 0.4
+
 
                , hsync-common                  >= 0.0.0.0    && < 0.2
 
