--- a/hsync-server/hsync-server.cabal
+++ b/hsync-server/hsync-server.cabal
@@ -84,6 +84,7 @@ library
                  , text                          >= 0.11       && < 0.12
                  , yaml                          >= 0.8        && < 0.9
                  , aeson                         >= 0.6.2.0    && < 0.7
+                 , containers                    >= 0.5        && < 0.6
 
                  , data-default
                  , directory                     >= 1.1        && < 1.3
