fixed some cosmetic cabal error

--- a/hsync-server-api/hsync-server-api.cabal
+++ b/hsync-server-api/hsync-server-api.cabal
@@ -19,7 +19,7 @@ library
   exposed-modules: HSync.Server
                    Yesod.JoinPath
 
-  Extra-Source-Files: routes
+  extra-source-files: routes
 
   -- other-modules: HSync.Server.Internal
   --                HSync.Server.JoinPath
