--- a/hsync-server/hsync-server.cabal
+++ b/hsync-server/hsync-server.cabal
@@ -52,19 +52,19 @@ library
   else
     ghc-options:   -Wall -O2
 
-  extensions: TemplateHaskell
-              QuasiQuotes
-              OverloadedStrings
-              NoImplicitPrelude
-              CPP
-              MultiParamTypeClasses
-              TypeFamilies
-              GADTs
-              GeneralizedNewtypeDeriving
-              FlexibleContexts
-              EmptyDataDecls
-              NoMonomorphismRestriction
-              DeriveDataTypeable
+  default-extensions: TemplateHaskell
+                      QuasiQuotes
+                      OverloadedStrings
+                      NoImplicitPrelude
+                      CPP
+                      MultiParamTypeClasses
+                      TypeFamilies
+                      GADTs
+                      GeneralizedNewtypeDeriving
+                      FlexibleContexts
+                      -- EmptyDataDecls
+                      -- NoMonomorphismRestriction
+                      DeriveDataTypeable
 
   build-depends: base                          >= 4          && < 5
 
@@ -73,7 +73,7 @@ library
 
                , hsync-common                  >= 0.0.0.0    && < 0.2
 
-               , yesod                         >= 1.2.5.2    && < 1.3
+               , yesod                         >= 1.2.5.2    && < 1.5
                , yesod-core                    >= 1.2.11     && < 1.3
                , yesod-auth                    >= 1.3.0.2    && < 1.4
                , yesod-static                  >= 1.2.2.4    && < 1.3
@@ -91,7 +91,7 @@ library
                , bytestring                    >= 0.9        && < 0.11
                , text                          >= 0.11       && < 1.2
                , yaml                          >= 0.8        && < 0.9
-               , aeson                         >= 0.6.2.0    && < 0.7
+               , aeson                         >= 0.6.2.0
                , containers                    >= 0.5        && < 0.6
                , blaze-markup                  >= 0.6.1      && < 0.7
 
