--- a/hsync-server-api/hsync-server-api.cabal
+++ b/hsync-server-api/hsync-server-api.cabal
@@ -29,18 +29,18 @@ library
 
 
   build-depends: base                          >= 4          && < 5
-               , yesod-core                    >= 1.2.11     && < 1.3
-               , yesod-auth                    >= 1.3.0.2    && < 1.4
-               , yesod-static                  >= 1.2.2.4    && < 1.3
-               , http-types                    >= 0.8        && < 0.9
+               , yesod-core                    >= 1.2.11
+               , yesod-auth                    >= 1.3.0.2
+               , yesod-static                  >= 1.2.2.4
+               , http-types                    >= 0.8
 
                , template-haskell
 
-               , text                          >= 0.11       && < 1.2
-               , blaze-builder                 >= 0.3.1.1    && < 0.4
+               , text                          >= 0.11
+               , blaze-builder                 >= 0.3.1.1
 
 
-               , hsync-common                  >= 0.0.0.0    && < 0.2
+               , hsync-common                  >= 0.0.0.0
 
 
   -- hs-source-dirs:
