--- a/hsync-server/config/settings.yml
+++ b/hsync-server/config/settings.yml
@@ -3,7 +3,7 @@ Default: &defaults
   port: 3000
   approot: "http://localhost:3000"
   filesDir: "files/"
-  notificationLogDir: "notificationlog.log"
+  notificationLog: "notifications.log"
   copyright: Insert copyright statement here
   #analytics: UA-YOURCODE
 
