--- a/hsync.cabal
+++ b/hsync.cabal
@@ -23,6 +23,9 @@ common setup
       , containers >= 0.6.5.1
       , these      >= 1.1.1.1
       , lens       >= 5.2
+      , directory  >= 1.3.8
+      , time       >= 1.11.1.1
+      , flat       >= 0.6
 
     default-language: GHC2021
 
